- changing from sun codeBase64 to apache commons, due to access problems on sun classes
git-svn-id: https://efaps.googlecode.com/svn/eFaps-kernel@3411 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0